--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Shareholder</title>
+    <title>Simple React Parcel Build</title>
   </head>
     <body>
       <noscript>
