--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,6 @@
 
       <div id="root"></div>
 
-      <script src="./build/js/react-quick-start.js" type="text/javascript"></script>
+      <script src="./src/index.js" type="text/javascript"></script>
     </body>
 </html>
